# keyport

./: .gitignore  README.md  compile.md
.github/workflows/: release.yml
src/: index.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apps.rs  config.rs  launcher.rs  main.rs  overlay.rs
src/assets/: ring.js  settings.js  style.css  vacuum.js
